syntax = "proto3";

service GenerationService {
  rpc generateUser (GenerateUserRequest) returns (UserResponse);
}

message GenerateUserRequest {

}

message UserResponse {
  int32 Id = 1;
  string LastName = 2;
  string FirstName = 3;
  string Login = 4;
  string UserRole = 5;
}